crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__agent_card_context_age.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                    ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                              $0.00
 ──────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                        ⢿ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ claude · Opus 4.8 · high · 200k                $1.27▐
▌  store refactor                                      ▐
▌  ▣ ━━━━━━━━━━━━━━╺━╺─────────────────────────── 38.2%▐
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k                    ◔ <t>▐
 ──────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                         $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                         $0.00

                        Alt+p sidebar/back · ? for help
