crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__api_error_dead_turn_card.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 1   ⏸︎ 0   ✓ 0                      ⢿ 0   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌! claude · Opus 4.8 · high · 200k              $1.27▐
▌  API Error: Bad Request                            ▐
▌  ▣ ━━━━━━━━━━━━━╺━╺────────────────────────── 38.2%▐
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k                      ▐
 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                      Alt+p sidebar/back · ? for help
