crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__card_density_expanded_non_selected_subagents.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 2                                            $0.00
 ────────────────────────────────────────────────────
 ? 1   ! 0   ⏸︎ 0   ✓ 0                      ⢿ 0   ○ 1

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌? asker · opus · high · 200k                        ▐
▌  needs review                                      ▐
▌  ▣ ━━━━━━━━━━╺━━─────────────────────────────   30%▐
▌  ▤ 30k · ◌ 24k ↘ 6k ↗ 1k                           ▐
▎○ claude · opus · high                              🮇
▎  delegated sweep                                   🮇
▎  ▢ ──────────────────────────────────────────    0%🮇
▎  ▤ 0                                               🮇
▎  ⧉ subagents (1)                                   🮇
▎    ✓ Explore — map the render path            $0.42🮇
 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                      Alt+p sidebar/back · ? for help
