crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__codex_card_context_composition.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                        ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                  $0.00
 ──────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0            ⢿ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ codex · GPT 5.5 · 258k                  ▐
▌  add tests                               ▐
▌  ▣ ━━━━━━━━━━━━━━╺━────────────────   50%▐
▌  ▤ 129k · ◌ 120k ↘ 9k ↗ 800              ▐
 ──────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0             $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0             $0.00

            Alt+p sidebar/back · ? for help
