crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__colliding_group_qualifiers.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                        ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 2                                  $0.00
 ──────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0            ⢿ 1   ○ 1

▎⑂ main · rimz ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ claude                                  ▐
▌  design API                              ▐
▌  ▢ ────────────────────────────────    0%▐
▌  ▤ 0                                     ▐

 ⑂ main · .agents
 ○ codex










 ──────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0             $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0             $0.00

            Alt+p sidebar/back · ? for help
