crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__directory_room_root_pod.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine                 /srv/agents

 ◎ 0                        ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                  $0.00
 ──────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0            ⢿ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ⇡2  +12 -3🮇
▌⣾ claude                                  ▐
▌  db migrate                              ▐
▌  ▢ ────────────────────────────────    0%▐
▌  ▤ 0                                     ▐

 agents
 ○ zsh
 ──────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0             $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0             $0.00

            Alt+p sidebar/back · ? for help
