crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__fleet_store.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 4                                  ◇ 1M ↘ 210k ↗ 1M ◌ 2M
 ¤ 1                                                  $8.25
 ──────────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                            ⢿ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ claude · Opus 4.8 · high · 200k                    $1.27▐
▌  store refactor                                          ▐
▌  ▣ ━━━━━━━━━━━━━━━╺━╺────────────────────────────── 38.2%▐
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k                            ▐










 ──────────────────────────────────────────────────────────
 Claude v2.1.158 · Claude Max                          ⇅ rc

  ▐▛███▜▌  ◎ 12  ◇ 498k ↘ 434k ↗ 64k ◌ 68k            $3.50
 ▝▜█████▛▘ <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱ ↻  <reset>
   ▘▘ ▝▝   <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱ ↻  <reset>

  ── Total: ───────────────────────────────────────────────
  W: ◎  92  ◇ 21.9M ↘ 3.2M ↗ 18.7M ◌  51.0M         $312.40
  M: ◎ 212  ◇ 34.9M ↘ 6.2M ↗ 28.7M ◌ 121.0M       $1,240.57

                            Alt+p sidebar/back · ? for help
